tests/snapshots/list_slice_reversed.snap
---
source: tests/fault_snapshots.rs
---
program: list_slice_reversed.lu
trap:    bounds
clause:  [mem.ub.defined]
rule:    Bounds
message: range 4..2 is outside a 6-element List
at:      11:15 `cs[4..2]`
because: (single-span fault)
