tests/snapshots/overflow_elem_read.snap
---
source: tests/fault_snapshots.rs
---
program: overflow_elem_read.lu
trap:    overflow
clause:  [arith.checked]
rule:    ArithChecked
message: `*` produced 4294967294, outside `i32` — checked arithmetic traps in every profile (X3); spell intended overflow `wrapping[i32]`
at:      14:13 `l[0] * 2`
because: (single-span fault)
