tests/snapshots/overflow_interp_operand.snap
---
source: tests/fault_snapshots.rs
---
program: overflow_interp_operand.lu
trap:    overflow
clause:  [arith.checked]
rule:    ArithChecked
message: `*` produced 4294967294, outside `i32` — checked arithmetic traps in every profile (X3); spell intended overflow `wrapping[i32]`
at:      12:20 `a * 2`
because: (single-span fault)
