tests/snapshots/p1_protector.snap
---
source: tests/prov_machine.rs
---
program:   p1_protector.lu
verdict:   ub(mem.ub)
row:       §7/P1
clause:    [mem.prov.state]
what:      access through a Disabled tag (use-after-free, use of an invalidated borrow)
licenses:  O1: `mut` params lower to `noalias` + `dereferenceable`; unique-tag stores forward without memory checks
message:   foreign write at alloc#0[0] while tag#1 (parameter) is PROTECTED for a call's extent — the protector makes the invalidation UB at the write rather than at a later use
access:    `b[0] = 3`
tag from:  `p`
tree:
  alloc#0 `c.malloc(8)` 8 byte(s), live, owned by region #0
    tag#0 c.malloc(8)#root Active exposed
      tag#1 parameter Frozen PROTECTED
      tag#2 parameter Reserved PROTECTED
